# nabto-client-sdk-examples

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  continious-integration.yml  continuous-integration.yml
heat_pump/: CMakeLists.txt  README.md
heat_pump/src/: client_config.hpp  client_key.cpp  client_key.hpp  client_state.hpp  coap_helper.cpp  coap_helper.hpp  file.hpp  heat_pump_requests.cpp  heat_pump_requests.hpp  iam_requests.cpp  iam_requests.hpp  main.cpp  pairing.cpp  pairing.hpp  persistence.hpp  scanner.hpp  util.hpp
lib/macos/: libnabto_client.dylib
lib/windows/: nabto_client.lib
nabto_client_sdk_library/: CHANGELOG.md  README.md  third-party-licenses.md
nabto_client_sdk_library/include/nabto/: nabto_client_android.h
nabto_client_sdk_library/lib/windows-i386/: nabto_client.lib
nabto_client_sdk_library/lib/windows-x86_64/: nabto_client.lib
simple_coap/: CMakeLists.txt  coap_client.cpp  simple_coap_client.cpp
simple_connection_events/: CMakeLists.txt  simple_connection_events.cpp
simple_direct_candidates/: CMakeLists.txt  simple_direct_candidates_client.cpp
simple_password_authentication/: CMakeLists.txt  simple_password_authentication_client.cpp
simple_stream/: CMakeLists.txt  simple_stream_client.cpp  stream_echo_client.cpp
simple_tunnel/: CMakeLists.txt  simple_tunnel_client.cpp
thermostat/: CMakeLists.txt  README.md
thermostat/src/: coap_helper.cpp  coap_helper.hpp  iam_requests.cpp  iam_requests.hpp  main.cpp  nabto_client_ptr.hpp  pairing.cpp  pairing.hpp  persistence.hpp  scanner.hpp  thermostat_requests.cpp  thermostat_requests.hpp  util.cpp
